--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es2016",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "dist"
-  },
-  "lib": ["es6", "dom", "es2017"]
+   "compilerOptions": {
+      "module": "commonjs",
+      "esModuleInterop": true,
+      "target": "es2016",
+      "moduleResolution": "node",
+      "sourceMap": true,
+      "outDir": "dist",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+   },
+   "lib": ["es6", "dom", "es2017"],
+   "types": ["@"],
+
 }
