--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
       "axios": "^0.26.1",
       "body-parser": "^1.20.0",
       "busboy": "^1.6.0",
+      "cors": "^2.8.5",
       "epub2": "^2.0.9",
       "express": "^4.18.1",
       "form-data": "^4.0.0",
