--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
    },
    "dependencies": {
       "@faker-js/faker": "^7.5.0",
+      "@types/uuid": "^9.0.1",
       "axios": "^0.26.1",
       "body-parser": "^1.20.0",
       "busboy": "^1.6.0",
